# Admin/OnAim.Admin.Domain/HubEntities/Coin/Coin.cs
@@ -6,21 +6,27 @@ namespace OnAim.Admin.Domain.HubEntities.Coin;
 
 public abstract class Coin
 {
-    public Coin(){}
+    public Coin()
+    {
+
+    }
 
     public Coin(string id,
-         string name,
-         string description,
-         string imageUrl,
-         CoinType coinType)
+        string name,
+        string description,
+        string imageUrl,
+        CoinType coinType,
+        int promotionId,
+        int? templateId = null)
     {
         Id = id;
         Name = name;
         Description = description;
         ImageUrl = imageUrl;
         CoinType = coinType;
+        PromotionId = promotionId;
+        FromTemplateId = templateId;
     }
-
     [BsonId]
     [BsonRepresentation(BsonType.ObjectId)]
     public string Id { get; set; }
@@ -30,7 +36,10 @@ public abstract class Coin
     public CoinType CoinType { get; set; }
     public bool IsDeleted { get; set; }
     public DateTimeOffset? DateDeleted { get; set; }
+    public int? FromTemplateId { get; private set; }
 
+    public int PromotionId { get; set; }
+    public Promotion Promotion { get; set; }
     public void Delete()
     {
         IsDeleted = true;
