# Admin/OnAim.Admin.Domain/HubEntities/WithdrawOption.cs
@@ -5,6 +5,30 @@ namespace OnAim.Admin.Domain.HubEntities;
 
 public class WithdrawOption
 {
+    public WithdrawOption()
+    {
+    }
+
+    public WithdrawOption(
+        string title,
+        string description,
+        string imageUrl,
+        string endpoint = null,
+        EndpointContentType? contentType = null,
+        string endpointContent = null,
+        int? withdrawOptionEndpointId = null,
+        IEnumerable<WithdrawOptionGroup> withdrawOptionGroups = null)
+    {
+        Title = title;
+        Description = description;
+        ImageUrl = imageUrl;
+        Endpoint = endpoint;
+        ContentType = contentType.Value;
+        EndpointContent = endpointContent;
+        WithdrawOptionEndpointId = withdrawOptionEndpointId;
+        WithdrawOptionGroups = withdrawOptionGroups?.ToList();
+    }
+
     public int Id { get; set; }
     public string Title { get; set; }
     public string Description { get; set; }
@@ -13,9 +37,9 @@ public class WithdrawOption
     public EndpointContentType ContentType { get; set; }
     public string EndpointContent { get; set; }
 
-    public int? WithdrawEndpointTemplateId { get; private set; }
-    public WithdrawOptionEndpoint WithdrawEndpointTemplate { get; set; }
+    public int? WithdrawOptionEndpointId { get; private set; }
+    public WithdrawOptionEndpoint WithdrawOptionEndpoint { get; private set; }
 
-    public ICollection<WithdrawOptionGroup> WithdrawOptionGroups { get; set; }
-    public ICollection<OutCoin> OutCoins { get; set; }
+    public ICollection<WithdrawOptionGroup> WithdrawOptionGroups { get; private set; }
+    public ICollection<OutCoin> OutCoins { get; private set; }
 }
